--- a/js/Tarea/Formulario.html
+++ b/js/Tarea/Formulario.html
@@ -6,106 +6,116 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="main.js">
+
     <title>Formulario</title>
 </head>
 
-<body>
-    <div class="container">
-        <h1 class="text-center">Banco falso</h1>
-        <h4 class="text-justify">Crédito para pagar la existencia</h4>
-        <p class="text-justify">Complete el siguiente formulario para entregarnos todo lo que tiene</p>
-        <div class="row justify-content-start">
-            <div class="col-3">
-                <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="floatingfName" placeholder="name">
-                    <label for="floatingfName">Primer Nombre</label>
-                </div>
-            </div>
-            <div class="col-3">
-                <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="floatingsName" placeholder="name">
-                    <label for="floatingsName">Segundo Nombre</label>
-                </div>
-            </div>
-            <div class="col-3">
-                <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="floatingLname" placeholder="name">
-                    <label for="floatingLname">Apellido Paterno</label>
-                </div>
-            </div>
-            <div class="col-3">
-                <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="floatingsLname" placeholder="name">
-                    <label for="floatingsLname">Apellido Materno</label>
-                </div>
-            </div>
-        </div>
-        <div class="row justify-content-start">
-            <div class="col-6">
-                <div class="form-floating mb-3">
-                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                    <label for="floatingInput">Email</label>
-                </div>
-            </div>
-            <div class="col-6">
-                <div class="form-floating mb-3">
-                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                    <label for="floatingInput">Confirmar Email</label>
-                </div>
+<body style="background-image: url(https://images.unsplash.com/photo-1526304640581-d334cdbbf45e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80); width: 100%; height: auto;">
+    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Banco falso</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Features</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Dropdown link
+                </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
         </div>
-        <div class="row justify-content-start">
-            <div class="col-4">
-                <select class="form-select" aria-label="Default select example">
-                    <option selected>Pais</option>
-                    <option value="1">Chile</option>
-                    <option value="2">Perú</option>
-                    <option value="3">Tanzania</option>
-                </select>
-            </div>
-            <div class="col-4">
-                <select class="form-select" aria-label="Default select example">
-                    <option selected>Región</option>
-                    <option value="1">uno</option>
-                    <option value="2">dos</option>
-                    <option value="3">tres</option>
-                </select>
-            </div>
-            <div class="col-4">
-                <select class="form-select" aria-label="Default select example">
-                    <option selected>Comuna</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                </select>
+    </nav>
+    <div class="container-sm py-3 mt-5 shadow-lg bg-warning">
+        <div class="row justify-content-center ">
+            <div class="col-6">
+                <h1 class="text-center text-white">Banco falso</h1>
+                <h4 class="text-justify">Crédito para pagar la existencia</h4>
+                <p class="text-justify">Complete el siguiente formulario para entregarnos todo lo que tiene</p>
             </div>
         </div>
-        <div class="row justify-content-start">
+        <div class="row justify-content-center">
             <div class="col-6">
-                <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="floatingInput" placeholder="Dirección">
-                    <label for="floatingInput">Dirección</label>
-                </div>
-            </div>
-            <div class="col-6">
-                <div class="form-floating mb-3">
-                    <input type="tel" class="form-control" id="floatingInput" placeholder="+569...">
-                    <label for="floatingInput">Teléfono</label>
-                </div>
-            </div>
-        </div>
-        <div class="col-12">
-            <div>
-                <select class="form-select" aria-label="Default select example">
-                        <option selected>Metodo de pago</option>
-                        <option value="1">Dinero</option>
-                        <option value="2">Órgano</option>
-                        <option value="3">Alma</option>
-                    </select>
+                <form class="row g-3 needs-validation" id="formulario" novalidate>
+                    <div class="col-md-4">
+                        <label for="nombre" class="form-label">Nombres</label>
+                        <input type="text" class="form-control" id="nombre" value="ej. José Patricio" required>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="apellidos" class="form-label">Apellidos</label>
+                        <input type="text" class="form-control" id="apellidos" value="ej. Irarrazabal" required>
+                    </div>
+                    <div class="col-md-4">
+                        <label for="rut" class="form-label">Rut</label>
+                        <input type="text" class="form-control" id="rut" value="123456789-0" required>
+                    </div>
+                    <div class="col-md-3">
+                        <label for="region" class="form-label">Región</label>
+                        <select class="form-select" id="region" required>
+                            <option selected disabled value="">Seleccione</option>
+                            <option>...</option>
+                        </select>
+                    </div>
+                    <div class="col-md-3">
+                        <label for="comuna" class="form-label">Comuna</label>
+                        <select class="form-select" id="comuna" required>
+                            <option selected disabled value="">Seleccione</option>
+                            <option>...</option>
+                        </select>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="validationCustom05" class="form-label">Dirección</label>
+                        <input type="text" class="form-control" id="direccion" required>
+                        <div class="invalid-feedback">
+                            Seleccione una dirección
+                        </div>
+                    </div>
+                    <div class="col-md-12">
+                        <label for="colorDeOjos" class="form-label">Color de ojos</label>
+                        <input type="text" class="form-control" id="colorDeOjos" value="ej. verdes" required>
+                        <div class="invalid-feedback">
+                            Este campo es obligatorio
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                            <label class="form-check-label" for="terminosYcondiciones">
+                            Acepto y he leído los <a href="http://">Terminos y condiciones</a>
+                            </label>
+                            <div class="invalid-feedback">
+                                You must agree before submitting.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <button class="btn btn-primary" type="submit">Validar</button>
+                        <button class="btn btn-secondary" type="submit">Limpiar campos</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
-    </div>
+
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
