Jugando con objetos

--- a/js/jugando-con-obj/jugandoConObj.html
+++ b/js/jugando-con-obj/jugandoConObj.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    Ingresa un Nombre de la lista
+    Ingresa un Nombre de la lista para saber su edad
     <ul>
         <li>Michael</li>
         <li>John</li>
