Actualización jugando con objetos

--- a/js/jugando-con-obj/jugandoConObj.html
+++ b/js/jugando-con-obj/jugandoConObj.html
@@ -16,7 +16,7 @@
         <li>John</li>
         <li>David</li>
     </ul>
-    <input type="text" id="nombre" placeholder="acá es">
+    <input type="text" id="nombre" placeholder="acá es" onchange="valorNombre()">
     <button onclick="buscarPorNombre()">ingresar</button>
     <p id="edad"></p>
 
