--- a/js/Pacman/index.html
+++ b/js/Pacman/index.html
@@ -5,73 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="style.css">
     <script src="main.js"></script>
     <title>Pacman demo</title>
 </head>
 
 <body>
-
-    <div class="row">
-        <div class="brick"></div>
-        <div class="brick"></div>
-        <div class="brick"></div>
-        <div class="brick"></div>
-        <div class="brick"></div>
-        <div class="brick"></div>
-        <div class="brick"></div>
-        <div class="brick"></div>
-        <div class="brick"></div>
-        <div class="brick"></div>
+    <div id="container">
+        <div id="world"></div>
+        <div id="pacman" style="top: 20px; left: 20px; "></div>
+        <div id="score">0</div>
+        <div id="cherry"></div>
     </div>
-    <div class="row">
-        <div class="brick"></div>
-        <div class="brick"></div>
-        <div class="coin"></div>
-        <div class="pacman"></div>
-        <div class="coin"></div>
-        <div class="empty"></div>
-        <div class="empty"></div>
-        <div class="empty"></div>
-        <div class="coin"></div>
-        <div class="brick"></div>
-    </div>
-    <div class="row">
-        <div class="brick"></div>
-        <div class="coin"></div>
-        <div class="brick"></div>
-        <div class="coin"></div>
-        <div class="coin"></div>
-        <div class="coin"></div>
-        <div class="coin"></div>
-        <div class="coin"></div>
-        <div class="coin"></div>
-        <div class="brick"></div>
-    </div>
-    <div class="row">
-        <div class="brick"></div>
-        <div class="coin"></div>
-        <div class="coin"></div>
-        <div class="coin"></div>
-        <div class="coin"></div>
-        <div class="coin"></div>
-        <div class="coin"></div>
-        <div class="coin"></div>
-        <div class="coin"></div>
-        <div class="brick"></div>
-    </div>
-    <div class="row">
-        <div class="brick"></div>
-        <div class="brick"></div>
-        <div class="brick"></div>
-        <div class="brick"></div>
-        <div class="brick"></div>
-        <div class="brick"></div>
-        <div class="brick"></div>
-        <div class="brick"></div>
-        <div class="brick"></div>
-        <div class="brick"></div>
-    </div>
+    <script>
+        displayWorld();
+        displayPacman();
+    </script>
 </body>
 
 </html>
