--- a/jQuery/Ninja-desaparecido/ninja-desaparecido.html
+++ b/jQuery/Ninja-desaparecido/ninja-desaparecido.html
@@ -45,7 +45,7 @@
 <body>
     <div class="container mt-3">
         <div class="row">
-            <img src="mantiz.jpg" id="uno" alt="insect" class="col-3 img-fluid border border-3 border-primary">
+            <img src="mantiz.jpg" id="uno" oe="asd" alt="insect" class="col-3 img-fluid border border-3 border-primary">
             <img src="mantiz.jpg" id="dos" alt="insect" class="col-3 img-fluid border border-3 border-secondary">
             <img src="mantiz.jpg" id="tres" alt="insect" class="col-3 img-fluid border border-3 border-success">
             <img src="mantiz.jpg" id="cuatro" alt="insect" class="col-3 img-fluid border border-3 border-danger">
